<resources>
    <string name="app_name">MAtH</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>

    <string name="home_login_button">登录</string>
    <string name="home_image">头像</string>
    <string name="home_server">服务器</string>
    <string name="home_email">邮箱</string>
    <string name="home_psd">密码</string>
    <string name="home_signup_button">注册</string>
</resources>